# projet_filtre_video

./: .gitignore  CMakeLists.txt  README.md  exemple.conf
include/: p_conf_loader.hpp  p_filters.hpp  p_utils.hpp
src/: main.cpp  p_conf_loader.cpp  p_filters.cpp  p_utils.cpp
